Make sure dotted separator doesnt overflow bounds of card

--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -260,7 +260,7 @@ textarea {
 
     hr {
       border-top: 1px dashed lightgray;
-      margin: 0px -20px;
+      margin: 0px -15px;
     }
 
     p {
